--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,13 @@
   "rules": {
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
-    "@typescript-eslint/no-unused-vars": [ "error", {
-      "argsIgnorePattern": "_"
-    }],
-    "camelcase": "off",
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "_"
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -39,7 +42,7 @@
   },
   "settings": {
     "import/resolver": {
-      "typescript": {}
+      "typescript":{}
     }
   }
 }
