--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "date-fns": "^2.14.0",
+    "date-fns": "^2.13.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "pg": "^8.2.1",
+    "pg": "^8.1.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.25",
-    "uuidv4": "^6.0.9"
+    "typeorm": "^0.2.24",
+    "uuidv4": "^6.0.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
-    "eslint": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.3"
+    "typescript": "^3.8.3"
   }
 }
