--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.2.0",
     "class-transformer": "^0.2.3",
     "cors": "^2.8.5",
     "date-fns": "^2.13.0",
@@ -34,6 +35,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.4",
     "@types/jest": "^26.0.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
