--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,19 @@ APP_SECRET=
 APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
 
-#Mail
-MAIL_DRIVER=ethereal
-
 #AWS CRedentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+#Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
+
+#Storage
+STORAGE_DRIVER=s3
+
+#Mail
+MAIL_DRIVER=ethereal
 
 
