--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@ APP_WEB_URL=http://localhost:3000
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
-#Redis
+#Redis => Cache
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASS=
 
 #Storage
-STORAGE_DRIVER=s3
+STORAGE_DRIVER=disk
 
 #Mail
 MAIL_DRIVER=ethereal
